# langchain-human-in-the-loop

./: .gitignore  README.md  pyproject.toml
examples/: bias_fairness_audit.py  codevf_direct.py  codevf_tool_agent.py  data_privacy_review.py  human_in_the_loop.py  irb_protocol_review.py  paper_review.py  replication_package_review.py  reproducibility_audit.py  sample_protocol.md
src/langchain_codevf/: __init__.py  tool.py
src/langchain_human_in_the_loop/: __init__.py  cli.py  tool.py
tests/: test_cli.py  test_tool.py
