[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-human-in-the-loop"
version = "0.2.0"
description = "Human-in-the-loop LangChain integration for CodeVF"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "langchain-core>=0.1.0",
  "pydantic>=2.0",
  "codevf-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.23",
  "python-dotenv>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
